--- a/create.html
+++ b/create.html
@@ -108,7 +108,7 @@ document.getElementById("loginForm").addEventListener("submit", function(event) 
 
   alert("Registration successful!");
 
-  window.location.href = "login1.html";
+  window.location.href = "login.html";
 });
 </script>
 
