--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
     </main>
     <form style="text-align: center; padding-left: 710px; margin-top: -50px; border-radius: 20px;">
         <div class="buttons">
-            <a class="signin"; href="chooselogin.html">Sign In</a>
+            <a class="signin"; href="choose.html">Sign In</a>
             <a class="register"; href="create.html">Register</a>
           </div>
     </form>
