--- a/upi.html
+++ b/upi.html
@@ -79,7 +79,7 @@
     alert("Please log in first.");
     window.location.href = "login.html";
   } else {
-    const cartKey = cart_${currentUser.email};
+    const cartKey = 'cart_${currentUser.email}';
     const cart = JSON.parse(localStorage.getItem(cartKey)) || [];
     const total = cart.reduce((sum, item) => sum + (item.price * item.quantity), 0);
     document.getElementById("totalAmount").textContent = total.toLocaleString();
